# PRISM-Protocol-steller

./: .env.example  .gitignore  CLAUDE.md  MIGRATION-XION.md  README.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  skills-lock.json  stellar-migration-plan.md  tsconfig.json  vercel.json
cosmwasm/: Cargo.toml  README.md
cosmwasm/prism-core/: Cargo.toml
cosmwasm/prism-core/src/: contract.rs  error.rs  lib.rs  math.rs  msg.rs  state.rs  tests.rs
cosmwasm/scripts/: deploy.sh
soroban/: .gitignore  Cargo.toml  estimate-deploy-cost.mjs
soroban/deployments/: mainnet.json  testnet.json
soroban/keys/: admin.json
soroban/prism-amm/: Cargo.toml
soroban/prism-amm/src/: errors.rs  lib.rs  state.rs  storage.rs  tests.rs
soroban/prism-amm/test_snapshots/tests/: first_add_liquidity_uses_geometric_mean_minus_min.1.json  full_lifecycle_lp_collects_fee_after_swap.1.json  init_pool_rejects_fee_above_max.1.json  init_pool_twice_errors.1.json  remove_liquidity_min_out_enforced.1.json  remove_liquidity_returns_pro_rata_share.1.json  second_add_liquidity_uses_min_of_two_sides.1.json  swap_min_amount_out_enforced.1.json  swap_quote_for_tranche_works_symmetrically.1.json  swap_tranche_for_quote_preserves_k_invariant.1.json
soroban/prism-core/: Cargo.toml
soroban/prism-core/src/: errors.rs  lib.rs  math.rs  reflector.rs  soroswap.rs  state.rs  storage.rs  tests.rs
soroban/prism-core/test_snapshots/tests/: accrue_yield_alpha_only_lifts_nav.1.json  deposit_first_mints_one_to_one_and_sets_nav.1.json  deposit_into_wiped_tranche_errors.1.json  deposit_paused_errors.1.json  deposit_second_uses_current_nav.1.json  disburse_loan_pays_principal_to_borrower.1.json  disburse_loan_twice_errors.1.json  full_protocol_lifecycle.1.json  init_config_twice_errors.1.json  init_loan_originates_in_pending_state.1.json  init_tranche_before_vault_errors.1.json  init_tranche_invalid_kind_errors.1.json  init_tranche_three_kinds.1.json  init_vault_seeds_active_state.1.json  loss_exceeding_total_assets_errors.1.json  oracle_allowlist_admin_flow.1.json  oracle_allowlist_respects_max_size.1.json  p1_t3_reserve_invariant_holds_through_lifecycle.1.json  p1_t4_waterfall_locked_demo_numbers.1.json  p1_t5_cascade_locked_demo_numbers.1.json  p1_t7_post_wipe_withdraw_returns_zero.1.json  p1_t8_sep41_admin_enforcement.1.json  p1_t8_sep41_admin_enforcement.2.json  p1_t9_storage_ttl_extension.1.json  p2_t7_seed_pool_liquidity_rejects_non_admin.1.json  p3_t2_verify_collateral_full_round_trip.1.json  p3_t3_collateral_nonce_replay_rejected.1.json  p3_t4_collateral_status_machine.1.json  p3_t5_disburse_loan_blocked_by_pending_collateral.1.json  pause_unpause_flips_flag.1.json  record_cloak_payout_full_round_trip.1.json  record_cloak_payout_unallowlisted_oracle_errors.1.json  record_cloak_payout_wrong_vault_errors.1.json  repay_loan_wrong_borrower_errors.1.json  (+8 more)
soroban/scripts/: add-oracle-allowlist.ts  deploy.sh  full-deploy.sh  mainnet-deploy.sh  oracle-allowlist.sh  update-admin.sh
(+237 files in other folders)
