[workspace]
resolver = "2"
members = ["prism-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/skyyycodes/PRISM-Protocol"

[workspace.dependencies]
cosmwasm-std = "2.2.0"
cosmwasm-schema = "2.2.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
thiserror = "1.0"

# Production wasm build profile. `cosmwasm/optimizer` invokes --release.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
incremental = false
rpath = false
