[workspace]
resolver = "2"
members = [
    "prism-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/skyyycodes/PRISM-Protocol"

[workspace.dependencies]
soroban-sdk = "22.0"

# Build profile for production wasm artifacts (soroban contract build invokes --release)
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Faster dev iteration; debug builds still run cargo test
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
