[package]
name = "prism-amm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PRISM Protocol — constant-product AMM for tranche pTokens on Soroban"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
