[package]
name = "prism-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PRISM Protocol — tranched credit engine on Soroban"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = "2.1"
rand = "0.8"
prism-amm = { path = "../prism-amm" }
